@startuml tb-observer
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 0
skinparam defaultFontName "Lucida Grande"
skinparam dpi 150
skinparam class {
  BackgroundColor #FFFFCE
  BorderColor #000000
  BorderThickness 1
  ArrowColor #000000
  FontColor #000000
  AttributeFontColor #000000
  StereotypeFontColor #000000
  HeaderBackgroundColor #FFFFCE
}
skinparam legendBackgroundColor #FFFFFF

title 그림 9-4 대응 — Observer (PULL) / Subject=EventPublisher
class EventPublisher <<Subject>> {
  +attach(observer: EventListener): void
  +detach(observer: EventListener): void
  +<color:red>notifyObservers(): void</color>
}
interface EventListener <<Observer>> {
  +<color:red>update(): void</color>
}
class TicketPurchasePublisher <<ConcreteSubject>> {
  -<color:red>subjectState: TicketIssuedEvent</color>
  --
  +<color:red>setState(TicketIssuedEvent): void</color>
  +<color:red>getState(): TicketIssuedEvent</color>
}
class BusTicketPurchaseListener <<ConcreteObserver>> {
  -<color:red>subject: TicketPurchasePublisher</color>
  --
  +<color:red>update(): void</color>
}
EventPublisher <|-- TicketPurchasePublisher
EventListener <|.. BusTicketPurchaseListener
EventPublisher o--> "*" EventListener : -observers
BusTicketPurchaseListener --> TicketPurchasePublisher : -subject
note bottom of BusTicketPurchaseListener
  iter4 정합: push(update(event)) → <color:red>pull(update())</color>
  옵서버가 subject.getState() 로 상태를 당겨온다
end note
legend bottom
  <#FFFFCE>|= 표기 |= 의미 |
  |<#FFFFCE> 노란 박스 | iteration 1-3 기존 |
  | <color:red>빨강 테두리/글자</color> | iteration 4 신규/수정 |
endlegend
@enduml